# knu-kdt

./: .gitignore  README.md  requirements.txt  requirements_freezed.txt
cloud/docker-chatbot/: Dockerfile
cloud/docker-chatbot/src/: app.py
cloud/knukdt_chatbot_dev/: Dockerfile  README.md
docs/: kdt.hwp  kdt.txt  knu.hwp  knu.txt  knu_tiny.txt
model/: lab.01_huggingface_pipelines.ipynb  lab.02_huggingface_transformers.ipynb  lab.03_huggingface_fine_tuning.ipynb  lab.04_sentence_transformers.ipynb  lab.05_rag_with_langchain.ipynb  lab.06_rag_evaluation.ipynb  lab.07_vector_database.ipynb
model/lab.06_rag_evaluation/: ex01.py
model/project/: .gitignore  README.md  pyproject.toml
model/project/data/docs/: rag_intro.md
model/project/src/rag_qna/: __init__.py  documents.py  evaluator.py  generator.py  index.py
model/project_sample/: requirements.txt
web/chatapp/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py
web/fastapi/: app.py  ex01.py  ex02.py  ex03.py  ex03_client.py  ex04.py  ex05.py  ex06.py  ex06_client.py  ex07.py
web/flask/: app.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py
web/flask/qna/: app.py
web/flask/qna2/: app.py
web/flask/qna3/: app.py
web/flask/templates/: hello.html  macros.html  messages.html
web/rag-chatbot/rag1/: api.py  app.py  rag.py
web/rag-chatbot/rag2/: api.py  app.py  rag.py
web/rag-chatbot/rag3/: api.py  app.py  rag.py
web/rag-chatbot/rag4/: api.py  app.py  rag.py
web/streamlit/: app.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py
(+25 files in other folders)
